Fixed Page2Location text align

--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,12 @@
 
 .Page2Style{
   width: 60vw;
+}
+
+.Page2Location{
   text-align: left;
 }
+
 
 .Page3Style{
   width: 60vw;
